Fix Collapse component.

--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -44,6 +44,7 @@
 	    display: none;
 	    height: 0px;
 	    opacity: 0;
+	    visibility: hidden;
 	    transform: translateX(-1000px);
 	}
 }
@@ -69,28 +70,16 @@
 	transition: background-color 1s ease-out, border 1s ease-out;
 }
 .clickable.active {
-/*	opacity: 1;
-	transform: translateX(0px);
-	transition: opacity 1s ease-in,
-				transform .6s ease-in;*/
 	animation-name: clickableIn;
 	animation-duration: 1s;
   	animation-fill-mode: forwards;
 }
 .clickable.unactive {
-/*	opacity: 0;
-	transform: translateX(1000px);
-	transition: opacity .8s ease-in,
-				transform 1s ease-in;*/
 	animation-name: clickableOut;
 	animation-duration: 1s;
   	animation-fill-mode: forwards;
-}
-.clickable.active span {
-	display: inline;
-}
-.clickable.unactive span {
-	display: none;
+  	opacity: 0;
+  	cursor: default;
 }
 @keyframes clickableOut {
 	0%{
